<resources>
    <string name="app_name">AnimationDemo</string>

    <string name="animation_tween">Tween动画</string>
    <string name="tween_rotate">Tween旋转动画</string>
    <string name="tween_translate">Tween移动动画</string>
    <string name="tween_custom">Tween自定义动画</string>

    <string name="animation_property">属性动画</string>
    <string name="property_start">开始属性动画</string>
    <string name="object_start">开始对象动画</string>
    <string name="path_start">开始Path动画</string>

    <string name="animation_frame">帧动画</string>

    <string name="animation_reveal">揭露动画</string>
    <string name="reveal_small_large">从小到大</string>
    <string name="reveal_large_small">从大到小</string>
    <string name="reveal_left_right">从左到右</string>
    <string name="reveal_lefttop_rightbotom">从左上到右下</string>

    <string name="transition_animation">转场动画</string>
    <string name="transition_old">老转场动画</string>
    <string name="transition_explode">爆炸转场动画</string>
    <string name="transition_slide">从下往上转场动画</string>
    <string name="transition_fade">渐变转场动画</string>
    <string name="transition_share">共享元素转场动画</string>


    <string name="vector_animation">矢量动画</string>
    <string name="vector_start">动起来</string>
    <string name="ic_dehaze">M10,10 L60,10 L60,20 L10,20 Z M10,30 L60,30 L60,40 L10,40 Z M10,50 L60,50 L60,60 L10,60 Z</string>
    <string name="ic_arrow_back">M5,35 L40,0 L47.072,7.072 L12.072,42.072 Z M10,30 L60,30 L60,40 L10,40 Z M12.072,27.928 L47.072,62.928 L40,70 L5,35 Z</string>

</resources>
