<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/iv_reveal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reveal_small_large"
        android:layout_marginTop="20dp"
        android:onClick="onRevealCenter"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reveal_large_small"
        android:layout_marginTop="20dp"
        android:onClick="onRevealCenter2"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reveal_left_right"
        android:layout_marginTop="20dp"
        android:onClick="onRevealLTR"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reveal_lefttop_rightbotom"
        android:layout_marginTop="20dp"
        android:onClick="onRevealLTTRB"/>




</LinearLayout>