<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="演示ValueAnimator"/>

        <ImageView
            android:id="@+id/iv_rotate"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_smile"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_start"
            android:layout_marginTop="20dp"
            android:onClick="onStartRotate"/>

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:text="123"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_start"
            android:layout_marginTop="20dp"
            android:onClick="onStartCalculate"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="演示ObjectAnimator"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/iv_car"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_car"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_start"
            android:layout_marginTop="20dp"
            android:onClick="onStartObjectAnimation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="演示路径动画"/>

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_location"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/path_start"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:onClick="onStartPathAnimation"/>

    </LinearLayout>

</ScrollView>
